--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write . --ignore-path .gitignore"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "just-debounce": "^1.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
