--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "freetunes2",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.7.0",
+  "description": "Servicio para escuchar y descargar musica desde yt",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon api/server.ts",
+    "dev:docker": "npm rebuild esbuild && npm run dev",
+    "start": "NODE_ENV=production ts-node-esm --experimental-specifier-resolution=node api/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint './**/*.{ts,tsx}' --ignore-path .gitignore",
@@ -12,13 +15,24 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/through2": "^2.0.41",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
     "just-debounce": "^1.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "send-seekable": "^1.0.4",
+    "through2": "^4.0.2",
+    "vite-express": "^0.11.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -35,9 +49,11 @@
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-testing-library": "5.0.1",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.21",
     "prettier": "2.5.1",
     "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   },
@@ -75,7 +91,7 @@
       "JSX": true
     },
     "rules": {
-      "no-console": 1,
+      "no-console": 0,
       "no-debugger": 1,
       "prettier/prettier": 1,
       "react/react-in-jsx-scope": 0,
