--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon api/server.ts",
     "dev:docker": "npm rebuild esbuild && npm run dev",
-    "start": "NODE_ENV=production ts-node-esm --experimental-specifier-resolution=node api/server.ts",
+    "start": "NODE_ENV=production node --loader ts-node/esm --experimental-specifier-resolution=node api/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint './**/*.{ts,tsx}' --ignore-path .gitignore",
@@ -15,13 +15,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
+    "@types/express": "^4.17.21",
     "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/through2": "^2.0.41",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
+    "http-terminator": "^3.2.0",
     "just-debounce": "^1.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -29,13 +34,11 @@
     "react-router-dom": "^6.6.2",
     "send-seekable": "^1.0.4",
     "through2": "^4.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.6.4",
     "vite-express": "^0.11.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "5.8.0",
     "@typescript-eslint/parser": "5.8.0",
     "@vitejs/plugin-react": "^2.1.0",
@@ -53,8 +56,6 @@
     "postcss": "^8.4.21",
     "prettier": "2.5.1",
     "tailwindcss": "^3.2.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.6.4",
     "vite": "^3.1.0"
   },
   "browserslist": {
