--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon api/server.ts",
     "dev:docker": "npm rebuild esbuild && npm run dev",
-    "start": "NODE_ENV=production node --loader ts-node/esm --experimental-specifier-resolution=node api/server.ts",
+    "start": "NODE_ENV=production vite-node api/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint './**/*.{ts,tsx}' --ignore-path .gitignore",
@@ -20,28 +20,30 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/stoppable": "^1.1.3",
     "@types/through2": "^2.0.41",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
-    "http-terminator": "^3.2.0",
     "just-debounce": "^1.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "send-seekable": "^1.0.4",
+    "stoppable": "^1.1.0",
     "through2": "^4.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
-    "vite-express": "^0.11.1"
+    "vite-express": "^0.11.1",
+    "vite-node": "^0.34.6",
+    "@vitejs/plugin-react": "^2.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.8.0",
     "@typescript-eslint/parser": "5.8.0",
-    "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.5.0",
     "eslint-config-prettier": "8.3.0",
