--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     },
     "types": ["vite/client"]
   },
-  "include": ["src"],
+  "include": ["src", "api"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
