--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "send-seekable": "^1.0.4",
     "stoppable": "^1.1.0",
     "through2": "^4.0.2",
-    "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "vite-express": "^0.11.1",
     "vite-node": "^0.34.6",
@@ -57,8 +56,7 @@
     "nodemon": "^3.0.1",
     "postcss": "^8.4.21",
     "prettier": "2.5.1",
-    "tailwindcss": "^3.2.4",
-    "vite": "^3.1.0"
+    "tailwindcss": "^3.2.4"
   },
   "browserslist": {
     "production": [
